capif/templates/sign-csr-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: "2022-09-15T06:43:57Z"
  labels:
    app.kubernetes.io/managed-by: Helm
    io.kompose.service: nginx
  name: sign-csr
  resourceVersion: "753070217"
  uid: e358594f-878a-413e-85f0-738a959d7d90
spec:
  host: {{ .Values.nginx.nginx.env.capifHostname }}
  path: /sign-csr
  port:
    targetPort: nginx-http
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2022-09-15T06:43:57Z"
      status: "True"
      type: Admitted
    host: {{ .Values.nginx.nginx.env.capifHostname }}
    routerCanonicalHostname: router-default.apps.ocp-epg.hi.inet
    routerName: default
    wildcardPolicy: None
